Refactor benchmarks to use caching and improve database frame resolution (#65)